--- a/Дерево.html
+++ b/Дерево.html
@@ -4,8 +4,13 @@
         <meta charset="utf-8">
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>IMDb</title>
+		
 	</head>
-	<body >
+	<body ><form action="https://www.imdb.com/registration/confirmation?u=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Faccountsettings%3Fref_%3Dnv_usr_pers_1">
+	<b id="p4"><input type="text" name="Login   " value="Login"></b><br>
+	<b id="p4"><input type="text" name="Password" value="Password"></b><br>
+<b id="p4"><input type="submit" value="Submit"></b>
+</form>
 		<div id="p1"><a href="https://www.imdb.com/"><img src="https://brod.kz/media/news/llfgt5/1514370710nd6d2-725x.jpg" width=100px></a></div>
 		<h1 id="p3">ТОП сериалов по мнению людей со всего мира!</h1>
 		<div class="space"></div>
@@ -22,3 +27,4 @@
 		<div id="p3"><a href="https://www.imdb.com/title/tt1475582/?ref_=ttls_li_tt"><img src="https://m.media-amazon.com/images/M/MV5BMWY3NTljMjEtYzRiMi00NWM2LTkzNjItZTVmZjE0MTdjMjJhL2ltYWdlL2ltYWdlXkEyXkFqcGdeQXVyNTQ4NTc5OTU@._V1_UX182_CR0,0,182,268_AL_.jpg" width = 250 height="300"></a></div>
 	</body>
 </html>
+
