--- a/Дерево.html
+++ b/Дерево.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color:AliceBlue;">
+<html>
 	<head>
         <meta charset="utf-8">
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
@@ -7,16 +7,25 @@
 		
 	</head>
 	<body>
-
-		<div id="p1"><a href="https://www.imdb.com/"><img src="https://brod.kz/media/news/llfgt5/1514370710nd6d2-725x.jpg" width=100px></a><h1 id="p3">ТОП сериалов по мнению людей со всего мира!</h1><form action="https://www.imdb.com/registration/confirmation?u=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Faccountsettings%3Fref_%3Dnv_usr_pers_1">
-	<b id="p4"><input type="text" name="Login   " value="Login"></b><br>
-	<b id="p4"><input type="text" name="Password" value="Password"></b><br>
-<b id="p4"><input type="submit" value="Submit"></b>
-</form></div>
-		
+<table style="width:100%">
+	<tr>
+		<td id="p1">
+		<b style="margin-left: 102%;"><a href="https://www.imdb.com/"><img src="https://brod.kz/media/news/llfgt5/1514370710nd6d2-725x.jpg" width=100px></a></b>
+	</td>
+	<td>
+		<h1  style="margin-left: 12%;">ТОП сериалов по мнению людей со всего мира!</h1>
+	</td>
+	<td>
+		<form action="https://www.imdb.com/registration/confirmation?u=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Faccountsettings%3Fref_%3Dnv_usr_pers_1">
+	<b><input type="text" name="Login   " value="Login"></b><br>
+	<b><input type="text" name="Password" value="Password"></b><br>
+<b><input type="submit" value="Submit"></b>
+</form></b>
+</td>
+		</table>
 
 		<div class="space"></div>
-		<div id="p1"><a href="https://www.imdb.com/movies-in-theaters/?ref_=nv_tp_inth_1"><b>Фильмы</b></a></div>
+		<div  id="p7"><a href="https://www.imdb.com/movies-in-theaters/?ref_=nv_tp_inth_1"><b>Фильмы</b></a></div>
 
 		<div id="p2"><a href="https://www.imdb.com/chart/toptv/?ref_=nv_tp_tv250_2"><b>Сериалы</b></a></div>
 
@@ -24,52 +33,52 @@
 
 		<div id="p2"><a href="https://www.imdb.com/registration/signin?u=https%3A%2F%2Fwww.imdb.com%2Flist%2Fwatchlist%3Fref_%3Dnv_wl_all_0"><b>Что посмотреть</b></a></div>
 
-<table>
+<table id="pt">
 	<tr>
 		<td>
-			<a style="margin-left: 80%;" href="https://www.imdb.com/title/tt0898266/?ref_=ttls_li_tt"><img src="http://i013.radikal.ru/0909/84/fcf51eab47fa.jpg" width = 250 height="310"></a>
+			<a href="https://www.imdb.com/title/tt0898266/?ref_=ttls_li_tt"><img src="http://i013.radikal.ru/0909/84/fcf51eab47fa.jpg" width = 250 height="310"></a>
 		</td> 
-        <td id="p6">
-    	Сериал повествует о жизни двух молодых талантливых физиков (Шелдон Купер и Леонард Хофстедтер), их привлекательной соседке по лестничной площадке, официантке и начинающей актрисе — Пенни, а также об их друзьях — астрофизике Раджеше Кутраппали и инженере Говарде Воловице. Действие сериала происходит в городе Пасадена, штат Калифорния.
+        <td ><b id="p8">
+    	Сериал повествует о жизни двух молодых талантливых физиков (Шелдон Купер и Леонард Хофстедтер), их привлекательной соседке по лестничной площадке, официантке и начинающей актрисе — Пенни, а также об их друзьях — астрофизике Раджеше Кутраппали и инженере Говарде Воловице. Действие сериала происходит в городе Пасадена, штат Калифорния.</b>
     	</td> 
 	<tr>
 		<td>
-			<a style="margin-left: 80%;" href="https://www.imdb.com/title/tt0903747/?ref_=fn_al_tt_1"><img src="https://cdn-images-1.medium.com/max/2400/1*Jh772SA8erMpe64mmQrE5Q.jpeg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0903747/?ref_=fn_al_tt_1"><img src="https://cdn-images-1.medium.com/max/2400/1*Jh772SA8erMpe64mmQrE5Q.jpeg" width = 250 height="300"></a>
 		</td>
-		<td id="p6">
-			«Во все тяжкие» (англ. Breaking Bad) — американская телевизионная криминальная драма, транслировавшаяся с 20 января 2008 года по 29 сентября 2013 года по кабельному каналу AMC. На протяжении пяти сезонов, состоящих из 62 эпизодов, показана история Уолтера Уайта, школьного учителя, у которого диагностировали неоперабельный рак лёгких. Вместе со своим бывшим учеником Джесси Пинкманом он начинает производить и продавать метамфетамин, чтобы обеспечить финансовое будущее своей семьи. Постановка и съёмка сериала велись в городе Альбукерке, штат Нью-Мексико
+		<td>
+			<b id="p8">«Во все тяжкие» (англ. Breaking Bad) — американская телевизионная криминальная драма, транслировавшаяся с 20 января 2008 года по 29 сентября 2013 года по кабельному каналу AMC. На протяжении пяти сезонов, состоящих из 62 эпизодов, показана история Уолтера Уайта, школьного учителя, у которого диагностировали неоперабельный рак лёгких. Вместе со своим бывшим учеником Джесси Пинкманом он начинает производить и продавать метамфетамин, чтобы обеспечить финансовое будущее своей семьи. Постановка и съёмка сериала велись в городе Альбукерке, штат Нью-Мексико</b>
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<a style="margin-left: 80%;" href="https://www.imdb.com/title/tt0944947/?ref_=nv_sr_1?ref_=nv_sr_1"><img src="http://forextrade.am/parts/tradingpsychology/img/18.jpeg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0944947/?ref_=nv_sr_1?ref_=nv_sr_1"><img src="http://forextrade.am/parts/tradingpsychology/img/18.jpeg" width = 250 height="300"></a>
 		</td>
-		<td id="p6">
-			Действие «Игры престолов» происходит в вымышленном мире, напоминающем средневековую Европу. В сериале одновременно действует множество персонажей и развивается несколько сюжетных линий. Основных сюжетных арок три: первая посвящена борьбе нескольких влиятельных домов за Железный Трон Семи Королевств либо за независимость от него; вторая — потомку свергнутой династии правителей, принцессе-изгнаннице, планирующей вернуть престол; третья — древнему братству, охраняющему государство от угроз с севера.
+		<td>
+			<b id="p8">Действие «Игры престолов» происходит в вымышленном мире, напоминающем средневековую Европу. В сериале одновременно действует множество персонажей и развивается несколько сюжетных линий. Основных сюжетных арок три: первая посвящена борьбе нескольких влиятельных домов за Железный Трон Семи Королевств либо за независимость от него; вторая — потомку свергнутой династии правителей, принцессе-изгнаннице, планирующей вернуть престол; третья — древнему братству, охраняющему государство от угроз с севера.</b>
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<a style="margin-left: 80%;" href="https://www.imdb.com/title/tt0108778/?ref_=ttls_li_tt"><img src="http://friends-online.co/uploads/images/2019/222/twqu517.jpg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0108778/?ref_=ttls_li_tt"><img src="http://friends-online.co/uploads/images/2019/222/twqu517.jpg" width = 250 height="300"></a>
 			</td>
-		<td id="p6">
-			«Друзья́» (англ. Friends) — американский комедийный телесериал, повествующий о жизни шестерых друзей. Признан одним из лучших комедийных сериалов в истории американского телевидения и стал одним из наиболее знаменитых проектов 1990-х годов. Сама постановка и творческая группа получили множество наград, в том числе шесть премий «Эмми» и премию «Золотой глобус».
+		<td>
+			<b id="p8">«Друзья́» (англ. Friends) — американский комедийный телесериал, повествующий о жизни шестерых друзей. Признан одним из лучших комедийных сериалов в истории американского телевидения и стал одним из наиболее знаменитых проектов 1990-х годов. Сама постановка и творческая группа получили множество наград, в том числе шесть премий «Эмми» и премию «Золотой глобус».</b>
 		</td>
 	</tr>
  	<tr>
 		<td>
-			<a style="margin-left: 80%;" href="https://www.imdb.com/title/tt0412142/?ref_=ttls_li_tt"><img src="http://kinofanonline.ru/uploads/posts/2014-04/1397194571_s6en.jpg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0412142/?ref_=ttls_li_tt"><img src="http://kinofanonline.ru/uploads/posts/2014-04/1397194571_s6en.jpg" width = 250 height="300"></a>
 		</td>
-		<td id="p6">
-			«Доктор Ха́ус» (англ. House, M.D.[2]) — американский телесериал о выдающемся враче-диагносте Грегори Хаусе (англ. Gregory House) и его команде. По жанру представляет собой медицинский детектив, но в сюжетах серий использованы также элементы драмы. Сериал пользуется огромной популярностью в мире[3][4] и был неоднократно отмечен престижными теленаградами — «Пибоди» и «Эмми».
+		<td>
+			<b id="p8">«Доктор Ха́ус» (англ. House, M.D.[2]) — американский телесериал о выдающемся враче-диагносте Грегори Хаусе (англ. Gregory House) и его команде. По жанру представляет собой медицинский детектив, но в сюжетах серий использованы также элементы драмы. Сериал пользуется огромной популярностью в мире[3][4] и был неоднократно отмечен престижными теленаградами — «Пибоди» и «Эмми».</b>
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<a style="margin-left: 80%;" href="https://www.imdb.com/title/tt1475582/?ref_=ttls_li_tt"><img src="https://m.media-amazon.com/images/M/MV5BMWY3NTljMjEtYzRiMi00NWM2LTkzNjItZTVmZjE0MTdjMjJhL2ltYWdlL2ltYWdlXkEyXkFqcGdeQXVyNTQ4NTc5OTU@._V1_UX182_CR0,0,182,268_AL_.jpg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt1475582/?ref_=ttls_li_tt"><img src="https://m.media-amazon.com/images/M/MV5BMWY3NTljMjEtYzRiMi00NWM2LTkzNjItZTVmZjE0MTdjMjJhL2ltYWdlL2ltYWdlXkEyXkFqcGdeQXVyNTQ4NTc5OTU@._V1_UX182_CR0,0,182,268_AL_.jpg" width = 250 height="300"></a>
 		</td>
-		<td id="p6">
-			«Ше́рлок», также известен как «Шерлок Холмс» (англ. Sherlock) — британский телесериал компании Hartswood Films, снятый для BBC Wales. Сюжет основан на произведениях сэра Артура Конан Дойля о детективе Шерлоке Холмсе, однако действие происходит (за исключением одной серии) в наши дни.
+		<td>
+			<b id="p8">«Ше́рлок», также известен как «Шерлок Холмс» (англ. Sherlock) — британский телесериал компании Hartswood Films, снятый для BBC Wales. Сюжет основан на произведениях сэра Артура Конан Дойля о детективе Шерлоке Холмсе, однако действие происходит (за исключением одной серии) в наши дни.</b>
 		</td>
 	</tr>
 </body>
