--- a/Дерево.html
+++ b/Дерево.html
@@ -4,26 +4,37 @@
         <meta charset="utf-8">
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>IMDb</title>
-		
+		  <style>
+   body {
+    background-attachment: fixed;
+   }
+  </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 <table style="width:100%">
+	<header>
 	<tr>
 		<td id="p1">
-		<b style="margin-left: 102%;"><a href="https://www.imdb.com/"><img src="https://brod.kz/media/news/llfgt5/1514370710nd6d2-725x.jpg" width=100px></a></b>
+		<b style="margin-left: 225%;"><a href="https://www.imdb.com/"><img src="https://brod.kz/media/news/llfgt5/1514370710nd6d2-725x.jpg" width=100px></a></b>
 	</td>
 	<td>
-		<h1  style="margin-left: 12%;">ТОП сериалов по мнению людей со всего мира!</h1>
+		<h1  style="margin-left: 28%;">ТОП сериалов по мнению людей со всего мира!</h1>
 	</td>
 	<td>
 		<form action="https://www.imdb.com/registration/confirmation?u=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Faccountsettings%3Fref_%3Dnv_usr_pers_1">
-	<b><input type="text" name="Login   " value="Login"></b><br>
-	<b><input type="text" name="Password" value="Password"></b><br>
-<b><input type="submit" value="Submit"></b>
+	<b style="margin-left: 40%;"><input type="text" name="Login   " value="Login"></b><br>
+	<b style="margin-left: 40%;"><input type="text" name="Password" value="Password"></b><br>
+	<b style="margin-left: 60%;"><input type="submit" value="Submit"></b>
 </form></b>
-</td>
+	</td>
+</tr>
+	</header>
 		</table>
-
 		<div class="space"></div>
 		<div  id="p7"><a href="https://www.imdb.com/movies-in-theaters/?ref_=nv_tp_inth_1"><b>Фильмы</b></a></div>
 
@@ -40,6 +51,8 @@
 		</td> 
         <td ><b id="p8">
     	Сериал повествует о жизни двух молодых талантливых физиков (Шелдон Купер и Леонард Хофстедтер), их привлекательной соседке по лестничной площадке, официантке и начинающей актрисе — Пенни, а также об их друзьях — астрофизике Раджеше Кутраппали и инженере Говарде Воловице. Действие сериала происходит в городе Пасадена, штат Калифорния.</b>
+    	<b = id="p4">
+    		<img src="http://v.img.com.ua/b/1100x999999/0/36/6c20dcaa1204160d15b7969f211f1360.jpg" width=100></b>
     	</td> 
 	<tr>
 		<td>
@@ -82,8 +95,5 @@
 		</td>
 	</tr>
 </body>
-<boot>
-	<a href="https://1ceo1.github.io/backpack/index.html"><div><b> 
-	WHAT HAD BEFORE?</b></div></a>
-</boot>
+
 </html>
