--- a/Дерево.html
+++ b/Дерево.html
@@ -7,13 +7,21 @@
 		  <style>
    body {
     background-attachment: fixed;
+    background-size: 100%;
    }
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+      width: 100%;
+      height: 100%;
+  }
+  </style>
 	</head>
 	<body>
 <table style="width:100%">
