--- a/Дерево.html
+++ b/Дерево.html
@@ -4,26 +4,51 @@
         <meta charset="utf-8">
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>IMDb</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  </style>
+  <style>
+  	.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  border-radius: 8px;
+  color: white;
+  padding: 2px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button5 {
+  background-color: white;
+  color: black;
+  border: 2px solid #555555;
+}</style>
+<style>
+	@media screen and (min-width: 480px) {
+  body {
+   background: url(background20.jpg)
+  }
+}</style>
 		  <style>
    body {
+   	 background-color: lightblue;
     background-attachment: fixed;
     background-size: 100%;
    }
   </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <style>
-  /* Make the image fully responsive */
-  .carousel-inner img {
-      width: 100%;
-      height: 100%;
-  }
-  </style>
+
 	</head>
+
 	<body>
+		
 <table style="width:100%">
 	<header>
 	<tr>
@@ -43,19 +68,19 @@
 </tr>
 	</header>
 		</table>
-		<div class="space"></div>
-		<div  id="p7"><a href="https://www.imdb.com/movies-in-theaters/?ref_=nv_tp_inth_1"><b>Фильмы</b></a></div>
+		
+		<button class="button button5" id="p7"><a href="https://www.imdb.com/movies-in-theaters/?ref_=nv_tp_inth_1"><b>Фильмы</b></a></button>
 
-		<div id="p2"><a href="https://www.imdb.com/chart/toptv/?ref_=nv_tp_tv250_2"><b>Сериалы</b></a></div>
+		<button class="button button5" id="p2"><a href="https://www.imdb.com/chart/toptv/?ref_=nv_tp_tv250_2"><b>Сериалы</b></a></button>
 
-		<div id="p2"><a href="https://www.imdb.com/news/top?ref_=nv_tp_nw"><b>Новости</b></a></div>
+		<button class="button button5" id="p2"><a href="https://www.imdb.com/news/top?ref_=nv_tp_nw"><b>Новости</b></a></button>
 
-		<div id="p2"><a href="https://www.imdb.com/registration/signin?u=https%3A%2F%2Fwww.imdb.com%2Flist%2Fwatchlist%3Fref_%3Dnv_wl_all_0"><b>Что посмотреть</b></a></div>
-
+		<button class="button button5" id="p2"><a href="https://www.imdb.com/registration/signin?u=https%3A%2F%2Fwww.imdb.com%2Flist%2Fwatchlist%3Fref_%3Dnv_wl_all_0"><b>Что посмотреть</b></a></button>
+                                                                                                                                                            
 <table id="pt">
 	<tr>
 		<td>
-			<a href="https://www.imdb.com/title/tt0898266/?ref_=ttls_li_tt"><img src="http://i013.radikal.ru/0909/84/fcf51eab47fa.jpg" width = 250 height="310"></a>
+			<a href="https://www.imdb.com/title/tt0898266/?ref_=ttls_li_tt"><img src="http://i013.radikal.ru/0909/84/fcf51eab47fa.jpg" width = 250 height="250"></a>
 		</td> 
         <td ><b id="p8">
     	Сериал повествует о жизни двух молодых талантливых физиков (Шелдон Купер и Леонард Хофстедтер), их привлекательной соседке по лестничной площадке, официантке и начинающей актрисе — Пенни, а также об их друзьях — астрофизике Раджеше Кутраппали и инженере Говарде Воловице. Действие сериала происходит в городе Пасадена, штат Калифорния.</b>
@@ -64,7 +89,7 @@
     	</td> 
 	<tr>
 		<td>
-			<a href="https://www.imdb.com/title/tt0903747/?ref_=fn_al_tt_1"><img src="https://cdn-images-1.medium.com/max/2400/1*Jh772SA8erMpe64mmQrE5Q.jpeg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0903747/?ref_=fn_al_tt_1"><img src="https://cdn-images-1.medium.com/max/2400/1*Jh772SA8erMpe64mmQrE5Q.jpeg" width = 250 height="250"></a>
 		</td>
 		<td>
 			<b id="p8">«Во все тяжкие» (англ. Breaking Bad) — американская телевизионная криминальная драма, транслировавшаяся с 20 января 2008 года по 29 сентября 2013 года по кабельному каналу AMC. На протяжении пяти сезонов, состоящих из 62 эпизодов, показана история Уолтера Уайта, школьного учителя, у которого диагностировали неоперабельный рак лёгких. Вместе со своим бывшим учеником Джесси Пинкманом он начинает производить и продавать метамфетамин, чтобы обеспечить финансовое будущее своей семьи. Постановка и съёмка сериала велись в городе Альбукерке, штат Нью-Мексико</b>
@@ -72,7 +97,7 @@
 	</tr>
 	<tr>
 		<td>
-			<a href="https://www.imdb.com/title/tt0944947/?ref_=nv_sr_1?ref_=nv_sr_1"><img src="http://forextrade.am/parts/tradingpsychology/img/18.jpeg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0944947/?ref_=nv_sr_1?ref_=nv_sr_1"><img src="http://forextrade.am/parts/tradingpsychology/img/18.jpeg" width = 250 height="250"></a>
 		</td>
 		<td>
 			<b id="p8">Действие «Игры престолов» происходит в вымышленном мире, напоминающем средневековую Европу. В сериале одновременно действует множество персонажей и развивается несколько сюжетных линий. Основных сюжетных арок три: первая посвящена борьбе нескольких влиятельных домов за Железный Трон Семи Королевств либо за независимость от него; вторая — потомку свергнутой династии правителей, принцессе-изгнаннице, планирующей вернуть престол; третья — древнему братству, охраняющему государство от угроз с севера.</b>
@@ -80,7 +105,7 @@
 	</tr>
 	<tr>
 		<td>
-			<a href="https://www.imdb.com/title/tt0108778/?ref_=ttls_li_tt"><img src="http://friends-online.co/uploads/images/2019/222/twqu517.jpg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0108778/?ref_=ttls_li_tt"><img src="http://friends-online.co/uploads/images/2019/222/twqu517.jpg" width = 250 height="250"></a>
 			</td>
 		<td>
 			<b id="p8">«Друзья́» (англ. Friends) — американский комедийный телесериал, повествующий о жизни шестерых друзей. Признан одним из лучших комедийных сериалов в истории американского телевидения и стал одним из наиболее знаменитых проектов 1990-х годов. Сама постановка и творческая группа получили множество наград, в том числе шесть премий «Эмми» и премию «Золотой глобус».</b>
@@ -88,7 +113,7 @@
 	</tr>
  	<tr>
 		<td>
-			<a href="https://www.imdb.com/title/tt0412142/?ref_=ttls_li_tt"><img src="http://kinofanonline.ru/uploads/posts/2014-04/1397194571_s6en.jpg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt0412142/?ref_=ttls_li_tt"><img src="http://kinofanonline.ru/uploads/posts/2014-04/1397194571_s6en.jpg" width = 250 height="250"></a>
 		</td>
 		<td>
 			<b id="p8">«Доктор Ха́ус» (англ. House, M.D.[2]) — американский телесериал о выдающемся враче-диагносте Грегори Хаусе (англ. Gregory House) и его команде. По жанру представляет собой медицинский детектив, но в сюжетах серий использованы также элементы драмы. Сериал пользуется огромной популярностью в мире[3][4] и был неоднократно отмечен престижными теленаградами — «Пибоди» и «Эмми».</b>
@@ -96,12 +121,15 @@
 	</tr>
 	<tr>
 		<td>
-			<a href="https://www.imdb.com/title/tt1475582/?ref_=ttls_li_tt"><img src="https://m.media-amazon.com/images/M/MV5BMWY3NTljMjEtYzRiMi00NWM2LTkzNjItZTVmZjE0MTdjMjJhL2ltYWdlL2ltYWdlXkEyXkFqcGdeQXVyNTQ4NTc5OTU@._V1_UX182_CR0,0,182,268_AL_.jpg" width = 250 height="300"></a>
+			<a href="https://www.imdb.com/title/tt1475582/?ref_=ttls_li_tt"><img src="https://m.media-amazon.com/images/M/MV5BMWY3NTljMjEtYzRiMi00NWM2LTkzNjItZTVmZjE0MTdjMjJhL2ltYWdlL2ltYWdlXkEyXkFqcGdeQXVyNTQ4NTc5OTU@._V1_UX182_CR0,0,182,268_AL_.jpg" width = 250 height="250"></a>
 		</td>
 		<td>
 			<b id="p8">«Ше́рлок», также известен как «Шерлок Холмс» (англ. Sherlock) — британский телесериал компании Hartswood Films, снятый для BBC Wales. Сюжет основан на произведениях сэра Артура Конан Дойля о детективе Шерлоке Холмсе, однако действие происходит (за исключением одной серии) в наши дни.</b>
 		</td>
 	</tr>
+</tr>
+</table>
+
 </body>
 
 </html>
