--- a/Дерево.html
+++ b/Дерево.html
@@ -44,11 +44,18 @@
     background-size: 100%;
    }
   </style>
+  <style>
+  .table-container {
+  width: 100%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}</style>
 
 	</head>
 
 	<body>
-		
+
+<div class="table-container">		
 <table style="width:100%">
 	<header>
 	<tr>
@@ -56,18 +63,19 @@
 		<b style="margin-left: 225%;"><a href="https://www.imdb.com/"><img src="https://brod.kz/media/news/llfgt5/1514370710nd6d2-725x.jpg" width=100px></a></b>
 	</td>
 	<td>
-		<h1  style="margin-left: 28%;">ТОП сериалов по мнению людей со всего мира!</h1>
+		<h1  style="margin-left: 20%;">ТОП сериалов по мнению людей со всего мира!</h1>
 	</td>
 	<td>
 		<form action="https://www.imdb.com/registration/confirmation?u=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Faccountsettings%3Fref_%3Dnv_usr_pers_1">
-	<b style="margin-left: 40%;"><input type="text" name="Login   " value="Login"></b><br>
-	<b style="margin-left: 40%;"><input type="text" name="Password" value="Password"></b><br>
-	<b style="margin-left: 60%;"><input type="submit" value="Submit"></b>
+	<b style="margin-left: 35%;"><input type="text" name="Login   " value="Login"></b><br>
+	<b style="margin-left: 35%;"><input type="text" name="Password" value="Password"></b><br>
+	<b style="margin-left: 55%;"><input type="submit" value="Submit"></b>
 </form></b>
 	</td>
 </tr>
 	</header>
 		</table>
+	</div>
 		
 		<button class="button button5" id="p7"><a href="https://www.imdb.com/movies-in-theaters/?ref_=nv_tp_inth_1"><b>Фильмы</b></a></button>
 
