--- a/Дерево.html
+++ b/Дерево.html
@@ -63,9 +63,9 @@
 	<td>                                                                             </td>
 	<td>
 		<form action="https://www.imdb.com/registration/confirmation?u=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Faccountsettings%3Fref_%3Dnv_usr_pers_1">
-	<b ><input type="text" name="Login   " value="Login"></b><br>
-	<b style="margin-left: 40%;"><input type="text" name="Password" value="Password"></b><br>
-	<b style="margin-left: 60%;"><input type="submit" value="Submit"></b>
+	<b style="margin-left: -210%;"><input type="text" name="Login   " value="Login"></b><br>
+	<b style="margin-left: -210%;"><input type="text" name="Password" value="Password"></b><br>
+	<b style="margin-left: -190%;"><input type="submit" value="Submit"></b>
 </form></b>
 	</td>
 </tr>
