--- a/Дерево.html
+++ b/Дерево.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <meta charset="utf-8">
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>IMDb</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  </style>
+	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+	<title>IMDb</title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+ 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  
   <style>
   	.button {
   background-color: #4CAF50; /* Green */
@@ -25,29 +24,30 @@
   margin: 4px 2px;
   cursor: pointer;
 }
-
 .button5 {
   background-color: white;
   color: black;
   border: 2px solid #555555;
-}</style>
+}
+</style>
+
 <style>
 	@media screen and (min-width: 480px) {
-  body {
-   background: url(background20.jpg)
-  }
-}</style>
-		  <style>
-   body {
-   	 background-color: lightblue;
-    background-attachment: fixed;
-    background-size: 100%;
-   }
-  </style>
- 
+    	body {
+   			background-image: url(white.jpg);
+    		background-attachment: fixed;
+    		background-position: center;
+    		background-size: 27.82%;
+    		background-repeat: no-repeat;
+    		box-shadow: 0 0 5px 2px;
+		}
+	}
+</style>
+
 	</head>
 
-	<body>	
+	<body>
+
 <table style="width:100%">
 	<header>
 	<tr>
