--- a/Дерево.html
+++ b/Дерево.html
@@ -34,13 +34,19 @@
 <style>
 	@media screen and (min-width: 480px) {
     	body {
-   			background-image: url(white.jpg);
+background-image: url(white.jpg);
+		}
+	}
+</style>
+
+<style>
+	body{
+		   			
     		background-attachment: fixed;
     		background-position: center;
     		background-size: 27.82%;
     		background-repeat: no-repeat;
     		box-shadow: 0 0 5px 2px;
-		}
 	}
 </style>
 
