--- a/Дерево.html
+++ b/Дерево.html
@@ -35,13 +35,17 @@
 	@media screen and (min-width: 480px) {
     	body {
 background-image: url(white.jpg);
+background-size: 100%;
+background-repeat: no-repeat;
+    		background-attachment: fixed;
+    		background-position: center;
 		}
 	}
 </style>
 
 <style>
 	body{
-		   			
+			background-image: url(white.jpg);
     		background-attachment: fixed;
     		background-position: center;
     		background-size: 27.82%;
