--- a/Дерево.html
+++ b/Дерево.html
@@ -35,10 +35,7 @@
 	@media screen and (min-width: 480px) {
     	body {
 background-image: url(white.jpg);
-background-size: 100%;
-background-repeat: no-repeat;
-    		background-attachment: fixed;
-    		background-position: center;
+
 		}
 	}
 </style>
@@ -50,7 +47,7 @@ background-repeat: no-repeat;
     		background-position: center;
     		background-size: 27.82%;
     		background-repeat: no-repeat;
-    		
+    		box-shadow: 0 0 5px 2px;
 	}
 </style>
 
