--- a/Дерево.html
+++ b/Дерево.html
@@ -44,8 +44,8 @@ background-image: url(white.jpg);
 	body{
 			background-image: url(white.jpg);
     		background-attachment: fixed;
-    		background-position: center;
-    		background-size: 27.82%;
+    		background-position: 34%;
+    		background-size: 28%;
     		background-repeat: no-repeat;
     		box-shadow: 0 0 5px 2px;
 	}
