--- a/Дерево.html
+++ b/Дерево.html
@@ -34,7 +34,7 @@
 <style>
 	@media screen and (min-width: 480px) {
     	body {
-background-image: url(white.jpg);
+background-image: url(white1.jpg);
 
 		}
 	}
