--- a/Дерево.html
+++ b/Дерево.html
@@ -42,12 +42,13 @@ background-image: url(white.jpg);
 
 <style>
 	body{
-			background-image: url(white1.jpg);
-    		background-attachment: fixed;
-    		background-position: 34%;
-    		background-size: 28%;
+			background-image: url(white.jpg), url(background20.jpg);
+    		background-attachment: scroll, fixed;
+    		background-position: 41%, 100%;
+    		background-size: 42% 98.5%, 100%;
     		background-repeat: no-repeat;
-    		box-shadow: 0 0 5px 2px;
+    		box-shadow: 0 0 10px rgba(0,0,0,0.5);
+
 	}
 </style>
 
@@ -70,9 +71,9 @@ background-image: url(white.jpg);
 	<td>                                                                             </td>
 	<td>
 		<form action="https://www.imdb.com/registration/confirmation?u=https%3A%2F%2Fwww.imdb.com%2Fregistration%2Faccountsettings%3Fref_%3Dnv_usr_pers_1">
-	<b style="margin-left: -210%;"><input type="text" name="Login   " value="Login"></b><br>
-	<b style="margin-left: -210%;"><input type="text" name="Password" value="Password"></b><br>
-	<b style="margin-left: -190%;"><input type="submit" value="Submit"></b>
+	<b style="margin-left: -35%;"><input type="text" name="Login   " value="Login"></b><br>
+	<b style="margin-left: -35%;"><input type="text" name="Password" value="Password"></b><br>
+	<b style="margin-left: -10%;"><input type="submit" value="Submit"></b>
 </form></b>
 	</td>
 </tr>
@@ -146,5 +147,8 @@ background-image: url(white.jpg);
 </table>
 
 </body>
+<boot style="margin-left: 92.5%  ">
+	Made by student
+	</boot>
 
 </html>
